--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.3",
+    "next": "15.0.1",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "postcss": "^8",
