Feat: validação de campos e página resgistrar

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "npx json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "axios": "^1.7.7",
