--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "postcss": "^8",
