--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "concurrently \"npm run dev:next\" \"npm run dev:json\"",
+    "dev:next": "next dev",
+    "dev:json": "json-server --watch db.json --port 3001",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "server": "npx json-server --watch db.json --port 3001"
+    "start": "concurrently \"next start\" \"json-server --watch db.json --port 3001\""
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -20,6 +20,7 @@
     "recharts": "^2.13.3"
   },
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
